--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
             ],
             'Gemini': [
                 ['Gemini 免費版', '免費', '提供基本的 AI 功能；可處理文本生成、翻譯、問答等任務；適合一般使用者。', '功能有限；無法使用高級模型；上下文處理能力較低。'],
-                ['Gemini Advanced', '每月 19.99 美元', '使用 Gemini 1.5 Pro 模型；更高的上下文處理能力（1 百萬 tokens）；可生成圖像和執行程式碼；與 Google 服務（如 Docs、Sheets、Gmail）整合；額外提供 2TB 的 Google One 雲端存儲。', '每月需支付訂閱費用；回應速度可能較慢。'],
+                ['Gemini Business', '$20 美元', '具備基本 AI 功能，適合中小企業；價格相對較低，適合 AI 入門', '功能較少，無高級 AI 推理與企業級安全保障'],
+                ['Gemini Enterprise', '$30 美元', '提供完整的 Google 生成式 AI 功能；支援 AI 驅動的 Google Meet（如智慧總結）；具備企業級安全功能，適合大型組織', '成本較高，適合需要進階功能的企業'],
+                ['Gemini Advanced', '$650 新台幣（約 $20 美元）', '使用 Gemini 1.5 Pro 模型；更高的上下文處理能力（1 百萬 tokens）；可生成圖像和執行程式碼；與 Google 服務（如 Docs、Sheets、Gmail）整合；額外提供 2TB 的 Google One 雲端存儲。', '需要 Google One AI Premium 訂閱才能使用，回應速度可能較慢。'],
             ]
         };
 
