--- a/index.html
+++ b/index.html
@@ -765,13 +765,13 @@
 
         <!-- 住宿推薦 -->
         <div class="accommodation-section">
-            <h2 class="section-title">🏨✨ 住宿推薦 ✨🏨</h2>
+            <h2 class="section-title">🏨✨ 住宿推薦 ✨🏨   可以無限投票！</h2>
             <div class="accommodation-grid">
                 <div class="card accommodation-option" data-option="yangshen">
                     <h4>🏡 仰森水畔民宿</h4>
                     <p>鄰近礁溪市區與水鳥保護區，戶外烤肉歡聚</p>
                     <p>親子遊戲玩樂，家庭旅遊優質選擇</p>
-                    <div class="price">$1100/人</div>
+                    <div class="price">$16700/間 (約$1113/人)</div>
                     <a href="https://tw-bnb.com/web/forestriver/" target="_blank" class="website-link">查看官網</a>
                     <div class="vote-button" onclick="vote('yangshen')">👍 投票</div>
                     <div class="vote-count" id="count-yangshen" onclick="showOptionStats('住宿投票', 0, '仰森水畔民宿')" style="cursor: pointer;" title="點擊查看詳細統計">0 票</div>
@@ -780,7 +780,7 @@
                     <h4>🌿 青覓礁溪</h4>
                     <p>現代設計感民宿，年輕人喜愛</p>
                     <p>Instagram 熱門打卡點，環境優美</p>
-                    <div class="price">$1200/人</div>
+                    <div class="price">$17500/間 (約$1167/人)</div>
                     <a href="https://www.instagram.com/cmjs3915?utm_source=ig_web_button_share_sheet&igsh=eHpocDVjem53MmE2" target="_blank" class="website-link">查看官網</a>
                     <div class="vote-button" onclick="vote('qingmi')">👍 投票</div>
                     <div class="vote-count" id="count-qingmi" onclick="showOptionStats('住宿投票', 1, '青覓礁溪')" style="cursor: pointer;" title="點擊查看詳細統計">0 票</div>
@@ -815,17 +815,17 @@
 
         <!-- 第一天晚餐投票 -->
         <div class="food-section">
-            <h2 class="section-title">🍽️✨ 第一天晚餐投票 ✨🍽️</h2>
+            <h2 class="section-title">🍽️✨ 第一天晚餐投票 ✨🍽️   可以無限投票！</h2>
             <div class="food-grid">
                 <div class="card dinner-option" data-option="mingshuiran">
-                    <h4>🍳 明水然鐵板燒</h4>
+                    <h4>🍳 明水然鐵板燒(1500/人)</h4>
                     <p>連續3年高CP值冠軍</p>
                     <p>Google評價4.8星，港澳遊客必吃</p>
                     <div class="vote-button" onclick="voteDinner('mingshuiran')">👍 投票</div>
                     <div class="vote-count" id="count-mingshuiran" onclick="showOptionStats('餐廳投票', 0, '明水然鐵板燒')" style="cursor: pointer;" title="點擊查看詳細統計">0 票</div>
                 </div>
                 <div class="card dinner-option" data-option="huangtai">
-                    <h4>🍲 皇泰火鍋城</h4>
+                    <h4>🍲 皇泰火鍋城(700/人)</h4>
                     <p>吃到飽火鍋，適合大團體</p>
                     <p>美國牛、天使紅蝦無限供應</p>
                     <div class="vote-button" onclick="voteDinner('huangtai')">👍 投票</div>
@@ -834,7 +834,7 @@
                 <div class="card dinner-option" data-option="keshi">
                     <h4>🥟 柯氏蔥油餅</h4>
                     <p>礁溪在地名產</p>
-                    <p>三星蔥爆滿，外酥內嫩</p>
+                    <p>早餐理論上是在車上吃啦，有想吃再投票！</p>
                     <div class="vote-button" onclick="voteDinner('keshi')">👍 投票</div>
                     <div class="vote-count" id="count-keshi" onclick="showOptionStats('餐廳投票', 2, '柯氏蔥油餅')" style="cursor: pointer;" title="點擊查看詳細統計">0 票</div>
                 </div>
@@ -848,7 +848,7 @@
                 <div class="card dinner-option" data-option="pizza">
                     <h4>🍕 叫披薩到民宿</h4>
                     <p>輕鬆愜意，在民宿享用</p>
-                    <p>邊吃邊聊天，享受悠閒時光</p>
+                    <p>邊吃邊上課，享受悠閒時光</p>
                     <div class="vote-button" onclick="voteDinner('pizza')">👍 投票</div>
                     <div class="vote-count" id="count-pizza" onclick="showOptionStats('餐廳投票', 4, '叫披薩到民宿')" style="cursor: pointer;" title="點擊查看詳細統計">0 票</div>
                 </div>
@@ -857,32 +857,32 @@
 
         <!-- 交通上車地點投票 -->
         <div class="accommodation-section">
-            <h2 class="section-title">🚗✨ 交通上車地點投票 ✨🚗</h2>
+            <h2 class="section-title">🚗✨ 交通上車地點投票 ✨🚗<br><p>投錯了我也沒辦法，請自己到群組自首！</p></h2>
             <div class="accommodation-grid">
                 <div class="card transport-option" data-option="taipei">
                     <h4>🏙️ 台北</h4>
-                    <p>台北車站或信義區集合</p>
+                    <p>沒意外的話應該是上陳聖文的車</p>
                     <p>方便台北市區的朋友</p>
                     <div class="vote-button" onclick="voteTransport('taipei')">👍 投票</div>
                     <div class="vote-count" id="count-taipei" onclick="showOptionStats('上車地點投票', 0, '台北')" style="cursor: pointer;" title="點擊查看詳細統計">0 票</div>
                 </div>
                 <div class="card transport-option" data-option="zhonghe">
                     <h4>🏘️ 中永和</h4>
-                    <p>中和或永和地區集合</p>
+                    <p>沒意外的話應該是上Lars的車</p>
                     <p>方便新北市的朋友</p>
                     <div class="vote-button" onclick="voteTransport('zhonghe')">👍 投票</div>
                     <div class="vote-count" id="count-zhonghe" onclick="showOptionStats('上車地點投票', 1, '中永和')" style="cursor: pointer;" title="點擊查看詳細統計">0 票</div>
                 </div>
                 <div class="card transport-option" data-option="nangang">
                     <h4>🚄 南港</h4>
-                    <p>南港車站或南港展覽館</p>
+                    <p>沒意外的話應該是上我的車</p>
                     <p>方便東區的朋友</p>
                     <div class="vote-button" onclick="voteTransport('nangang')">👍 投票</div>
                     <div class="vote-count" id="count-nangang" onclick="showOptionStats('上車地點投票', 2, '南港')" style="cursor: pointer;" title="點擊查看詳細統計">0 票</div>
                 </div>
                 <div class="card transport-option" data-option="keelung">
                     <h4>🌊 基隆</h4>
-                    <p>基隆車站或基隆港</p>
+                    <p>沒意外的話應該是上李苡菲的車</p>
                     <p>方便基隆地區的朋友</p>
                     <div class="vote-button" onclick="voteTransport('keelung')">👍 投票</div>
                     <div class="vote-count" id="count-keelung" onclick="showOptionStats('上車地點投票', 3, '基隆')" style="cursor: pointer;" title="點擊查看詳細統計">0 票</div>
@@ -909,11 +909,11 @@
             <h2>💰✨ 費用預估總覽（每人）✨💰</h2>
             <div class="cost-item">交通費：$100-200</div>
             <div class="cost-item">住宿費：$1,000-2,000</div>
-            <div class="cost-item">餐費：$500-1,000</div>
+            <div class="cost-item">餐費：$500-2,000</div>
             <div class="cost-item">按摩：$800-1,200</div>
-            <div class="cost-item">其他：$300-500</div>
+            <div class="cost-item">區塊鏈講師：$300</div>
             <div style="margin-top: 20px; font-size: 1.2em;">
-                <strong>總計：約 $2,700-4,900 / 人</strong>
+                <strong>總計：約 每人$2,700-5,700</strong>
             </div>
         </div>
     </div>
