--- a/index.html
+++ b/index.html
@@ -937,7 +937,7 @@
                         <div class="activity-title">小補充！！！</div>
                         <div class="activity-detail">大家自己抓緊時間洗澡唷</div>
                     </div>
-                </div><br>
+                </div>
             </div>
         </div>
 
@@ -986,9 +986,9 @@
                     <div class="time">14:00</div>
                     <div class="activity">
                         <div class="activity-title">🚗 北上返程</div>
-                        <div class="activity-detail">避開塞車時段，愉快結束兩天一夜之旅</div><br>
+                        <div class="activity-detail">避開塞車時段，愉快結束兩天一夜之旅</div>
                     </div>
-                </div><br>
+                </div>
             </div>
         </div>
 
