--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         }
 
         .day-content {
-            padding: 25px 30px;
+            padding: 25px 30px 45px;
         }
 
         .time-item {
@@ -580,7 +580,7 @@
             }
             
             .day-content {
-                padding: 20px;
+                padding: 20px 20px 35px;
             }
             
             .time-item {
