--- a/index.html
+++ b/index.html
@@ -257,6 +257,10 @@
             position: relative;
         }
 
+        .time-item:last-child {
+            margin-bottom: 0;
+        }
+
         .time-item:hover {
             background: linear-gradient(135deg, #dcedc8, #e8f5e9); /* 懸停時的淺綠色漸層 */
             transform: translateX(8px) scale(1.02);
