--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                 <!-- 網站標題 -->
                 <header class="text-center my-8">
                     <h1 class="text-4xl font-bold tracking-tight nature-title text-shadow-lg">抹茶山出遊小隊</h1>
-                    <p class="text-lg text-gray-200 mt-2">2025 / 9 / 20 - 9 / 21</p>
+                    <p class="text-lg text-gray-200 mt-2">2025 / 9 / 20 - 21</p>
                 </header>
 
                 <!-- 主視覺 -->
@@ -603,13 +603,38 @@
                             </div>
                         </div>
 
+                        <!-- Rosa車 -->
+                        <div class="mb-6 p-4 bg-gradient-to-r from-orange-500/20 to-red-500/20 rounded-xl border border-orange-400/30">
+                            <div class="flex items-center mb-3">
+                                <div class="w-10 h-10 bg-orange-500 rounded-full flex items-center justify-center text-white font-bold mr-3">R</div>
+                                <div>
+                                    <h3 class="text-lg font-semibold text-orange-300">Rosa車 (新店)</h3>
+                                    <p class="text-sm text-gray-300">4人</p>
+                                </div>
+                            </div>
+                            <div class="grid grid-cols-2 gap-2 text-sm">
+                                <div class="flex items-center p-2 bg-white/10 rounded-lg">
+                                    <div class="w-6 h-6 bg-blue-500 rounded-full flex items-center justify-center text-white text-xs font-bold mr-2">L</div>
+                                    <span>Lars</span>
+                                </div>
+                                <div class="flex items-center p-2 bg-white/10 rounded-lg">
+                                    <div class="w-6 h-6 bg-red-500 rounded-full flex items-center justify-center text-white text-xs font-bold mr-2">陳</div>
+                                    <span>陳浩</span>
+                                </div>
+                                <div class="flex items-center p-2 bg-white/10 rounded-lg">
+                                    <div class="w-6 h-6 bg-lime-500 rounded-full flex items-center justify-center text-white text-xs font-bold mr-2">季</div>
+                                    <span>季蕎</span>
+                                </div>
+                            </div>
+                        </div>
+
                         <!-- 聖文車 -->
                         <div class="mb-6 p-4 bg-gradient-to-r from-blue-500/20 to-cyan-500/20 rounded-xl border border-blue-400/30">
                             <div class="flex items-center mb-3">
                                 <div class="w-10 h-10 bg-blue-500 rounded-full flex items-center justify-center text-white font-bold mr-3">聖</div>
                                 <div>
                                     <h3 class="text-lg font-semibold text-blue-300">聖文車 (劍潭)</h3>
-                                    <p class="text-sm text-gray-300">5人</p>
+                                    <p class="text-sm text-gray-300">3人</p>
                                 </div>
                             </div>
                             <div class="grid grid-cols-2 gap-2 text-sm">
@@ -621,14 +646,6 @@
                                     <div class="w-6 h-6 bg-purple-500 rounded-full flex items-center justify-center text-white text-xs font-bold mr-2">I</div>
                                     <span>Iris</span>
                                 </div>
-                                <div class="flex items-center p-2 bg-white/10 rounded-lg">
-                                    <div class="w-6 h-6 bg-lime-500 rounded-full flex items-center justify-center text-white text-xs font-bold mr-2">季</div>
-                                    <span>季喬</span>
-                                </div>
-                                <div class="flex items-center p-2 bg-white/10 rounded-lg">
-                                    <div class="w-6 h-6 bg-red-500 rounded-full flex items-center justify-center text-white text-xs font-bold mr-2">陳</div>
-                                    <span>陳浩</span>
-                                </div>
                             </div>
                         </div>
 
@@ -638,7 +655,7 @@
                                 <div class="w-10 h-10 bg-purple-500 rounded-full flex items-center justify-center text-white font-bold mr-3">浩</div>
                                 <div>
                                     <h3 class="text-lg font-semibold text-purple-300">浩崴車 (北車)</h3>
-                                    <p class="text-sm text-gray-300">4人</p>
+                                    <p class="text-sm text-gray-300">3人</p>
                                 </div>
                             </div>
                             <div class="grid grid-cols-2 gap-2 text-sm">
@@ -649,10 +666,6 @@
                                 <div class="flex items-center p-2 bg-white/10 rounded-lg">
                                     <div class="w-6 h-6 bg-teal-500 rounded-full flex items-center justify-center text-white text-xs font-bold mr-2">C</div>
                                     <span>Celine</span>
-                                </div>
-                                <div class="flex items-center p-2 bg-white/10 rounded-lg">
-                                    <div class="w-6 h-6 bg-pink-500 rounded-full flex items-center justify-center text-white text-xs font-bold mr-2">R</div>
-                                    <span>Rosa</span>
                                 </div>
                             </div>
                         </div>
@@ -679,7 +692,7 @@
 
                 <header class="text-center my-8">
                     <h1 class="text-3xl font-bold tracking-tight nature-title text-shadow-lg">出遊成員</h1>
-                    <p class="text-gray-300 mt-2">15位夥伴一起出遊</p>
+                    <p class="text-gray-300 mt-2">一起爬山gogogo</p>
                 </header>
 
                 <!-- 出遊成員名單 -->
@@ -687,64 +700,64 @@
                     <div class="p-6">
                         <div class="grid grid-cols-3 gap-4 text-center text-gray-200">
                             <div class="bg-white/10 rounded-lg p-3">
-                                <div class="w-12 h-12 bg-green-500 rounded-full mx-auto mb-2 flex items-center justify-center text-white font-bold">興</div>
-                                <span class="text-sm">興煜</span>
-                            </div>
-                            <div class="bg-white/10 rounded-lg p-3">
-                                <div class="w-12 h-12 bg-pink-500 rounded-full mx-auto mb-2 flex items-center justify-center text-white font-bold">R</div>
-                                <span class="text-sm">Rosa</span>
-                            </div>
-                            <div class="bg-white/10 rounded-lg p-3">
-                                <div class="w-12 h-12 bg-blue-500 rounded-full mx-auto mb-2 flex items-center justify-center text-white font-bold">L</div>
-                                <span class="text-sm">Lars</span>
-                            </div>
-                            <div class="bg-white/10 rounded-lg p-3">
-                                <div class="w-12 h-12 bg-purple-500 rounded-full mx-auto mb-2 flex items-center justify-center text-white font-bold">I</div>
-                                <span class="text-sm">Iris</span>
-                            </div>
-                            <div class="bg-white/10 rounded-lg p-3">
-                                <div class="w-12 h-12 bg-orange-500 rounded-full mx-auto mb-2 flex items-center justify-center text-white font-bold">浩</div>
-                                <span class="text-sm">浩崴</span>
-                            </div>
-                            <div class="bg-white/10 rounded-lg p-3">
-                                <div class="w-12 h-12 bg-red-500 rounded-full mx-auto mb-2 flex items-center justify-center text-white font-bold">陳</div>
-                                <span class="text-sm">陳浩</span>
-                            </div>
-                            <div class="bg-white/10 rounded-lg p-3">
-                                <div class="w-12 h-12 bg-cyan-500 rounded-full mx-auto mb-2 flex items-center justify-center text-white font-bold">詹</div>
+                                <img src="https://i.postimg.cc/VNG54Y9m/2025-09-18-104517.png" alt="小詹" class="w-16 h-16 rounded-full mx-auto mb-2 object-cover border-2 border-white/20">
                                 <span class="text-sm">小詹</span>
                             </div>
                             <div class="bg-white/10 rounded-lg p-3">
-                                <div class="w-12 h-12 bg-emerald-500 rounded-full mx-auto mb-2 flex items-center justify-center text-white font-bold">E</div>
+                                <img src="https://i.postimg.cc/5NLY1WJS/2025-09-18-104526.png" alt="Emily" class="w-16 h-16 rounded-full mx-auto mb-2 object-cover border-2 border-white/20">
                                 <span class="text-sm">Emily</span>
                             </div>
                             <div class="bg-white/10 rounded-lg p-3">
-                                <div class="w-12 h-12 bg-indigo-500 rounded-full mx-auto mb-2 flex items-center justify-center text-white font-bold">祖</div>
+                                <img src="https://i.postimg.cc/0yCzMGb6/2025-09-18-104535.png" alt="Lars" class="w-16 h-16 rounded-full mx-auto mb-2 object-cover border-2 border-white/20">
+                                <span class="text-sm">Lars</span>
+                            </div>
+                            <div class="bg-white/10 rounded-lg p-3">
+                                <img src="https://i.postimg.cc/jjdLzW7M/2025-09-18-104542.png" alt="Rosa" class="w-16 h-16 rounded-full mx-auto mb-2 object-cover border-2 border-white/20">
+                                <span class="text-sm">Rosa</span>
+                            </div>
+                            <div class="bg-white/10 rounded-lg p-3">
+                                <img src="https://i.postimg.cc/YC74CDqK/2025-09-18-104549.png" alt="祖恩" class="w-16 h-16 rounded-full mx-auto mb-2 object-cover border-2 border-white/20">
                                 <span class="text-sm">祖恩</span>
                             </div>
                             <div class="bg-white/10 rounded-lg p-3">
-                                <div class="w-12 h-12 bg-teal-500 rounded-full mx-auto mb-2 flex items-center justify-center text-white font-bold">C</div>
+                                <img src="https://i.postimg.cc/nLzhX6y5/2025-09-18-104556.png" alt="Celine" class="w-16 h-16 rounded-full mx-auto mb-2 object-cover border-2 border-white/20">
                                 <span class="text-sm">Celine</span>
                             </div>
                             <div class="bg-white/10 rounded-lg p-3">
-                                <div class="w-12 h-12 bg-lime-500 rounded-full mx-auto mb-2 flex items-center justify-center text-white font-bold">季</div>
+                                <img src="https://i.postimg.cc/bwLvNzBk/2025-09-18-104603.png" alt="季蕎" class="w-16 h-16 rounded-full mx-auto mb-2 object-cover border-2 border-white/20">
                                 <span class="text-sm">季蕎</span>
                             </div>
                             <div class="bg-white/10 rounded-lg p-3">
-                                <div class="w-12 h-12 bg-rose-500 rounded-full mx-auto mb-2 flex items-center justify-center text-white font-bold">玳</div>
+                                <img src="https://i.postimg.cc/gkVJQyyM/2025-09-18-104609.png" alt="Iris" class="w-16 h-16 rounded-full mx-auto mb-2 object-cover border-2 border-white/20">
+                                <span class="text-sm">Iris</span>
+                            </div>
+                            <div class="bg-white/10 rounded-lg p-3">
+                                <img src="https://i.postimg.cc/K8mz2KJm/2025-09-18-104619.png" alt="浩崴" class="w-16 h-16 rounded-full mx-auto mb-2 object-cover border-2 border-white/20">
+                                <span class="text-sm">浩崴</span>
+                            </div>
+                            <div class="bg-white/10 rounded-lg p-3">
+                                <img src="https://i.postimg.cc/8PQcZXvJ/2025-09-18-104626.png" alt="玳綺" class="w-16 h-16 rounded-full mx-auto mb-2 object-cover border-2 border-white/20">
                                 <span class="text-sm">玳綺</span>
                             </div>
                             <div class="bg-white/10 rounded-lg p-3">
-                                <div class="w-12 h-12 bg-violet-500 rounded-full mx-auto mb-2 flex items-center justify-center text-white font-bold">聖</div>
+                                <img src="https://i.postimg.cc/fW0kjQVQ/2025-09-18-104632.png" alt="陳浩" class="w-16 h-16 rounded-full mx-auto mb-2 object-cover border-2 border-white/20">
+                                <span class="text-sm">陳浩</span>
+                            </div>
+                            <div class="bg-white/10 rounded-lg p-3">
+                                <img src="https://i.postimg.cc/bJ4rc3F5/2025-09-18-104638.png" alt="聖文" class="w-16 h-16 rounded-full mx-auto mb-2 object-cover border-2 border-white/20">
                                 <span class="text-sm">聖文</span>
                             </div>
                             <div class="bg-white/10 rounded-lg p-3">
-                                <div class="w-12 h-12 bg-amber-500 rounded-full mx-auto mb-2 flex items-center justify-center text-white font-bold">喬</div>
+                                <img src="https://i.postimg.cc/j2N5sPpS/2025-09-18-104649.png" alt="雯雯" class="w-16 h-16 rounded-full mx-auto mb-2 object-cover border-2 border-white/20">
+                                <span class="text-sm">雯雯</span>
+                            </div>
+                            <div class="bg-white/10 rounded-lg p-3">
+                                <img src="https://i.postimg.cc/d1h3xznd/2025-09-18-104701.png" alt="喬喬" class="w-16 h-16 rounded-full mx-auto mb-2 object-cover border-2 border-white/20">
                                 <span class="text-sm">喬喬</span>
                             </div>
                             <div class="bg-white/10 rounded-lg p-3">
-                                <div class="w-12 h-12 bg-sky-500 rounded-full mx-auto mb-2 flex items-center justify-center text-white font-bold">雯</div>
-                                <span class="text-sm">雯雯</span>
+                                <img src="https://i.postimg.cc/mDBV3yS0/2025-09-18-105730.png" alt="興煜" class="w-16 h-16 rounded-full mx-auto mb-2 object-cover border-2 border-white/20">
+                                <span class="text-sm">興煜</span>
                             </div>
                         </div>
                     </div>
@@ -924,7 +937,7 @@
                                 </label>
                                 <label class="checklist-item flex items-center space-x-3 cursor-pointer rounded-lg p-2">
                                     <input type="checkbox" class="w-5 h-5 text-green-600 bg-gray-700 border-gray-600 rounded focus:ring-green-500 focus:ring-2">
-                                    <span class="text-sm">泳衣 (泡溫泉用)</span>
+                                    <span class="text-sm">泳衣泳帽 (泡溫泉用)</span>
                                 </label>
                             </div>
                         </div>
