--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                     </a>
                 </div>
 
-                <!-- 快速導覽卡片 - 與底部導航完全一致 -->
+                <!-- 快速導覽卡片 - 統一的2x3網格顯示 -->
                 <div class="grid grid-cols-2 gap-4 mt-4">
                     <div class="nav-card bg-white/10 backdrop-blur-md rounded-xl p-4 text-center cursor-pointer hover:bg-white/20 transition-all" onclick="showPage('members-page')">
                         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-people-fill mx-auto mb-2 text-green-400" viewBox="0 0 16 16">
@@ -369,20 +369,20 @@
                         <h3 class="font-semibold">住宿溫泉</h3>
                         <p class="text-xs text-gray-300 mt-1">資訊</p>
                     </div>
-                </div>
-                
-                <!-- 其他功能快捷入口 -->
-                <div class="mt-6">
-                    <div class="nav-card bg-white/5 backdrop-blur-md rounded-xl p-3 cursor-pointer hover:bg-white/10 transition-all" onclick="showPage('transport-page')">
-                        <div class="flex items-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-car-front-fill mr-3 text-orange-400" viewBox="0 0 16 16">
-                                <path d="M2.52 3.515A2.5 2.5 0 0 1 4.82 2h6.362c1 0 1.904.596 2.298 1.515l.792 1.848c.075.175.21.319.38.404.5.25.855.715.965 1.262l.335 1.679q.05.242.049.49v.413c0 .814-.39 1.543-1 1.997V13.5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1-.5-.5v-1.338c-1.292.048-2.745.088-4 .088s-2.708-.04-4-.088V13.5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1-.5-.5v-1.892c-.61-.454-1-1.183-1-1.997v-.413a2.5 2.5 0 0 1 .049-.49l.335-1.68c.11-.546.465-1.012.964-1.261a.8.8 0 0 0 .381-.404l.792-1.848ZM3 10a1 1 0 1 0 0-2 1 1 0 0 0 0 2m10 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2M6 8a1 1 0 0 0 0 2h4a1 1 0 1 0 0-2zM2.906 5.189a.51.51 0 0 0 .497.731c.91-.073 3.35-.17 4.597-.17s3.688.097 4.597.17a.51.51 0 0 0 .497-.731l-.956-1.913A.5.5 0 0 0 11.691 3H4.309a.5.5 0 0 0-.447.276L2.906 5.19Z"/>
-                            </svg>
-                            <div>
-                                <h4 class="font-semibold text-sm">交通安排</h4>
-                                <p class="text-xs text-gray-400">分車資訊與集合地點</p>
-                            </div>
-                        </div>
+                    <div class="nav-card bg-white/10 backdrop-blur-md rounded-xl p-4 text-center cursor-pointer hover:bg-white/20 transition-all" onclick="showPage('transport-page')">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-car-front-fill mx-auto mb-2 text-orange-400" viewBox="0 0 16 16">
+                            <path d="M2.52 3.515A2.5 2.5 0 0 1 4.82 2h6.362c1 0 1.904.596 2.298 1.515l.792 1.848c.075.175.21.319.38.404.5.25.855.715.965 1.262l.335 1.679q.05.242.049.49v.413c0 .814-.39 1.543-1 1.997V13.5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1-.5-.5v-1.338c-1.292.048-2.745.088-4 .088s-2.708-.04-4-.088V13.5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1-.5-.5v-1.892c-.61-.454-1-1.183-1-1.997v-.413a2.5 2.5 0 0 1 .049-.49l.335-1.68c.11-.546.465-1.012.964-1.261a.8.8 0 0 0 .381-.404l.792-1.848ZM3 10a1 1 0 1 0 0-2 1 1 0 0 0 0 2m10 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2M6 8a1 1 0 0 0 0 2h4a1 1 0 1 0 0-2zM2.906 5.189a.51.51 0 0 0 .497.731c.91-.073 3.35-.17 4.597-.17s3.688.097 4.597.17a.51.51 0 0 0 .497-.731l-.956-1.913A.5.5 0 0 0 11.691 3H4.309a.5.5 0 0 0-.447.276L2.906 5.19Z"/>
+                        </svg>
+                        <h3 class="font-semibold">交通安排</h3>
+                        <p class="text-xs text-gray-300 mt-1">分車資訊</p>
+                    </div>
+                    <div class="nav-card bg-white/10 backdrop-blur-md rounded-xl p-4 text-center cursor-pointer hover:bg-white/20 transition-all" onclick="showPage('budget-page')">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-wallet-fill mx-auto mb-2 text-green-400" viewBox="0 0 16 16">
+                            <path d="M1.5 2A1.5 1.5 0 0 0 0 3.5v2h6a.5.5 0 0 1 .5.5c0 .253.08.644.306.958.207.288.557.542 1.194.542s.987-.254 1.194-.542C9.42 6.644 9.5 6.253 9.5 6a.5.5 0 0 1 .5-.5h6v-2A1.5 1.5 0 0 0 14.5 2z"/>
+                            <path d="M16 6.5h-5.551a2.678 2.678 0 0 1-.443 1C9.613 8.215 8.963 8.5 8 8.5s-1.613-.285-2.006-.5a2.678 2.678 0 0 1-.443-1H0v6A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5z"/>
+                        </svg>
+                        <h3 class="font-semibold">預算規劃</h3>
+                        <p class="text-xs text-gray-300 mt-1">$2,393/人</p>
                     </div>
                 </div>
             </main>
@@ -1108,6 +1108,146 @@
         </div>
     </div>
 
+    <!-- 預算規劃頁面 -->
+    <div id="budget-page" class="page-container">
+        <div class="min-h-screen w-full flex flex-col items-center p-4 sm:p-6 pb-20">
+            <main class="w-full max-w-lg mx-auto">
+                <header class="text-center my-8">
+                    <h1 class="text-3xl font-bold tracking-tight nature-title text-shadow-lg">預算規劃</h1>
+                    <p class="text-gray-300 mt-2">詳細費用明細</p>
+                </header>
+
+                <!-- 預算明細 -->
+                <div class="nature-card backdrop-blur-md rounded-2xl overflow-hidden mb-6">
+                    <div class="p-6">
+                        <h2 class="text-2xl font-bold mb-6 flex items-center nature-title">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-wallet-fill mr-3 text-green-400" viewBox="0 0 16 16">
+                                <path d="M1.5 2A1.5 1.5 0 0 0 0 3.5v2h6a.5.5 0 0 1 .5.5c0 .253.08.644.306.958.207.288.557.542 1.194.542s.987-.254 1.194-.542C9.42 6.644 9.5 6.253 9.5 6a.5.5 0 0 1 .5-.5h6v-2A1.5 1.5 0 0 0 14.5 2z"/>
+                                <path d="M16 6.5h-5.551a2.678 2.678 0 0 1-.443 1C9.613 8.215 8.963 8.5 8 8.5s-1.613-.285-2.006-.5a2.678 2.678 0 0 1-.443-1H0v6A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5z"/>
+                            </svg>
+                            費用明細
+                        </h2>
+                        
+                        <!-- 費用明細 -->
+                        <div class="space-y-4">
+                            <!-- 住宿費用 -->
+                            <div class="p-4 bg-gradient-to-r from-blue-500/20 to-cyan-500/20 rounded-xl border border-blue-400/30">
+                                <div class="flex items-center justify-between mb-2">
+                                    <h3 class="text-lg font-semibold text-blue-300 flex items-center">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-house-heart-fill mr-2" viewBox="0 0 16 16">
+                                            <path d="M7.293 1.5a1 1 0 0 1 1.414 0L11 3.793V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v3.293l2.354 2.353a.5.5 0 0 1-.708.708L8 2.207l-5.646 5.647a.5.5 0 0 1-.708-.708z"/>
+                                            <path d="m14 9.293-6-6-6 6V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5zm-6-.811c1.664-1.673 5.825 1.254 0 5.018-5.825-3.764-1.664-6.691 0-5.018"/>
+                                        </svg>
+                                        住宿費用
+                                    </h3>
+                                    <span class="text-lg font-bold text-blue-200">$1,193/人</span>
+                                </div>
+                                <p class="text-sm text-gray-300">仰森水畔民宿 $16,700 ÷ 14人</p>
+                            </div>
+
+                            <!-- 交通費用 -->
+                            <div class="p-4 bg-gradient-to-r from-orange-500/20 to-red-500/20 rounded-xl border border-orange-400/30">
+                                <div class="flex items-center justify-between mb-2">
+                                    <h3 class="text-lg font-semibold text-orange-300 flex items-center">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-car-front-fill mr-2" viewBox="0 0 16 16">
+                                            <path d="M2.52 3.515A2.5 2.5 0 0 1 4.82 2h6.362c1 0 1.904.596 2.298 1.515l.792 1.848c.075.175.21.319.38.404.5.25.855.715.965 1.262l.335 1.679q.05.242.049.49v.413c0 .814-.39 1.543-1 1.997V13.5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1-.5-.5v-1.338c-1.292.048-2.745.088-4 .088s-2.708-.04-4-.088V13.5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1-.5-.5v-1.892c-.61-.454-1-1.183-1-1.997v-.413a2.5 2.5 0 0 1 .049-.49l.335-1.68c.11-.546.465-1.012.964-1.261a.8.8 0 0 0 .381-.404l.792-1.848ZM3 10a1 1 0 1 0 0-2 1 1 0 0 0 0 2m10 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2M6 8a1 1 0 0 0 0 2h4a1 1 0 1 0 0-2zM2.906 5.189a.51.51 0 0 0 .497.731c.91-.073 3.35-.17 4.597-.17s3.688.097 4.597.17a.51.51 0 0 0 .497-.731l-.956-1.913A.5.5 0 0 0 11.691 3H4.309a.5.5 0 0 0-.447.276L2.906 5.19Z"/>
+                                        </svg>
+                                        交通費用
+                                    </h3>
+                                    <span class="text-lg font-bold text-orange-200">$200/人</span>
+                                </div>
+                                <p class="text-sm text-gray-300">分車油錢 + 過路費</p>
+                            </div>
+
+                            <!-- 區塊鏈課程費用 -->
+                            <div class="p-4 bg-gradient-to-r from-purple-500/20 to-indigo-500/20 rounded-xl border border-purple-400/30">
+                                <div class="flex items-center justify-between mb-2">
+                                    <h3 class="text-lg font-semibold text-purple-300 flex items-center">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-mortarboard-fill mr-2" viewBox="0 0 16 16">
+                                            <path d="M8.211 2.047a.5.5 0 0 0-.422 0L.5 5.5v5a.5.5 0 0 0 .5.5h15a.5.5 0 0 0 .5-.5v-5zM8 7.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132"/>
+                                            <path d="M2 11.5a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5m4.5-.5a.5.5 0 0 0 0 1h3a.5.5 0 0 0 0-1z"/>
+                                        </svg>
+                                        區塊鏈課程
+                                    </h3>
+                                    <span class="text-lg font-bold text-purple-200">$200/人</span>
+                                </div>
+                                <p class="text-sm text-gray-300">浩崴區塊鏈分享課程費用</p>
+                            </div>
+
+                            <!-- 餐飲費用 -->
+                            <div class="p-4 bg-gradient-to-r from-green-500/20 to-emerald-500/20 rounded-xl border border-green-400/30">
+                                <div class="flex items-center justify-between mb-2">
+                                    <h3 class="text-lg font-semibold text-green-300 flex items-center">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cup-hot-fill mr-2" viewBox="0 0 16 16">
+                                            <path fill-rule="evenodd" d="M.5 6a.5.5 0 0 0-.488.608l1.652 7.434A2.5 2.5 0 0 0 4.104 16h5.792a2.5 2.5 0 0 0 2.44-1.958l.131-.59a3 3 0 0 0 1.3-5.854l.221-.99A.5.5 0 0 0 13.5 6zM13 12.5a2.01 2.01 0 0 1-.316-.025l.867-3.898A2.001 2.001 0 0 1 13 12.5"/>
+                                            <path d="m4.4.8-.003.004-.014.019a4 4 0 0 0-.204.31 2 2 0 0 0-.141.267c-.026.06-.034.092-.037.103v.004a.6.6 0 0 0 .091.248c.075.133.178.272.308.445l.01.012c.118.158.26.347.37.543.112.2.22.455.22.745 0 .188-.065.368-.119.494a3 3 0 0 1-.202.388 5 5 0 0 1-.253.382l-.018.025-.005.008-.002.002A.5.5 0 0 1 3.6 4.2l.003-.004.014-.019a4 4 0 0 0 .204-.31 2 2 0 0 0 .141-.267c.026-.06.034-.092.037-.103a.6.6 0 0 0-.09-.252A4 4 0 0 0 3.6 2.8l-.01-.012a5 5 0 0 1-.37-.543A1.53 1.53 0 0 1 3 1.5c0-.188.065-.368.119-.494.059-.138.134-.274.202-.388a6 6 0 0 1 .253-.382l.025-.035A.5.5 0 0 1 4.4.8m3 0-.003.004-.014.019a4 4 0 0 0-.204.31 2 2 0 0 0-.141.267c-.026.06-.034.092-.037.103v.004a.6.6 0 0 0 .091.248c.075.133.178.272.308.445l.01.012c.118.158.26.347.37.543.112.2.22.455.22.745 0 .188-.065.368-.119.494a3 3 0 0 1-.202.388 5 5 0 0 1-.253.382l-.018.025-.005.008-.002.002A.5.5 0 0 1 6.6 4.2l.003-.004.014-.019a4 4 0 0 0 .204-.31 2 2 0 0 0 .141-.267c.026-.06.034-.092.037-.103a.6.6 0 0 0-.09-.252A4 4 0 0 0 6.6 2.8l-.01-.012a5 5 0 0 1-.37-.543A1.53 1.53 0 0 1 6 1.5c0-.188.065-.368.119-.494.059-.138.134-.274.202-.388a6 6 0 0 1 .253-.382l.025-.035A.5.5 0 0 1 7.4.8m3 0-.003.004-.014.019a4 4 0 0 0-.204.31 2 2 0 0 0-.141.267c-.026.06-.034.092-.037.103v.004a.6.6 0 0 0 .091.248c.075.133.178.272.308.445l.01.012c.118.158.26.347.37.543.112.2.22.455.22.745 0 .188-.065.368-.119.494a3 3 0 0 1-.202.388 5 5 0 0 1-.253.382l-.018.025-.005.008-.002.002A.5.5 0 0 1 9.6 4.2l.003-.004.014-.019a4 4 0 0 0 .204-.31 2 2 0 0 0 .141-.267c.026-.06.034-.092.037-.103a.6.6 0 0 0-.09-.252A4 4 0 0 0 9.6 2.8l-.01-.012a5 5 0 0 1-.37-.543A1.53 1.53 0 0 1 9 1.5c0-.188.065-.368.119-.494.059-.138.134-.274.202-.388a6 6 0 0 1 .253-.382l.025-.035A.5.5 0 0 1 10.4.8"/>
+                                        </svg>
+                                        餐飲費用
+                                    </h3>
+                                    <span class="text-lg font-bold text-green-200">$800/人</span>
+                                </div>
+                                <div class="text-sm text-gray-300 space-y-1">
+                                    <div>• 第一天晚餐：$400</div>
+                                    <div>• 第二天午餐：$400</div>
+                                    <div>• 登山行動糧：自備</div>
+                                </div>
+                            </div>
+
+                            <!-- 溫泉費用 -->
+                            <div class="p-4 bg-gradient-to-r from-cyan-500/20 to-blue-500/20 rounded-xl border border-cyan-400/30">
+                                <div class="flex items-center justify-between mb-2">
+                                    <h3 class="text-lg font-semibold text-cyan-300 flex items-center">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-droplet-fill mr-2" viewBox="0 0 16 16">
+                                            <path d="M8 16a6 6 0 0 0 6-6c0-1.655-1.122-2.904-2.432-4.362C10.254 4.176 8.75 2.503 8 0c0 0-6 5.686-6 10a6 6 0 0 0 6 6M6.646 4.646l.708.708c-.29.29-1.128 1.311-1.907 2.87l-.894-.448c.85-1.702 1.803-2.838 2.093-3.13"/>
+                                        </svg>
+                                        溫泉/按摩
+                                    </h3>
+                                    <span class="text-lg font-bold text-cyan-200">$200-1,100</span>
+                                </div>
+                                <div class="text-sm text-gray-300 space-y-1">
+                                    <div>• 森林風呂：$188-250</div>
+                                    <div>• 川湯春天：$380</div>
+                                    <div>• 四季溫泉：$300</div>
+                                    <div>• 湯圍溝按摩：$1,100</div>
+                                </div>
+                                <p class="text-xs text-amber-300 mt-2">💡 個人選擇項目，可自由參加</p>
+                            </div>
+
+                            <!-- 總預算 -->
+                            <div class="p-4 bg-gradient-to-r from-purple-500/30 to-pink-500/30 rounded-xl border border-purple-400/50">
+                                <div class="flex items-center justify-between">
+                                    <h3 class="text-xl font-bold text-purple-200 flex items-center">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-calculator-fill mr-2" viewBox="0 0 16 16">
+                                            <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2zm2 .5v2a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 .5-.5v-2a.5.5 0 0 0-.5-.5h-7a.5.5 0 0 0-.5.5m0 4v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5M4.5 9a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM4 12.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5M7.5 6a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM7 9.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5m.5 2.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM10 6.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5m.5 2.5a.5.5 0 0 0-.5.5v4a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-4a.5.5 0 0 0-.5-.5z"/>
+                                        </svg>
+                                        預計總花費
+                                    </h3>
+                                    <span class="text-2xl font-bold text-purple-100">$2,393/人</span>
+                                </div>
+                                <p class="text-sm text-purple-200 mt-2">基本費用：$2,393/人 (住宿+交通+區塊鏈+餐飲)</p>
+                                <p class="text-sm text-purple-200">含溫泉/按摩：$2,593-3,493/人</p>
+                            </div>
+                        </div>
+
+                        <div class="mt-6 pt-4 border-t border-white/20">
+                            <div class="flex items-center text-amber-300">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-circle-fill mr-2" viewBox="0 0 16 16">
+                                    <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16m.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2"/>
+                                </svg>
+                                <h4 class="font-semibold">費用說明</h4>
+                            </div>
+                            <div class="text-sm text-gray-200 mt-2 pl-1 space-y-1">
+                                <p>• 以上為預估費用，實際金額可能有所調整</p>
+                                <p>• 溫泉/按摩為個人選擇項目，可自由參加</p>
+                                <p>• 建議多準備 $500 作為額外支出</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </main>
+        </div>
+    </div>
+
     <!-- 底部導航 -->
     <nav class="bottom-nav">
         <div class="flex">
@@ -1117,12 +1257,6 @@
                     <path d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293z"/>
                 </svg>
                 <span class="text-xs mt-1">首頁</span>
-            </div>
-            <div class="nav-item" onclick="showPage('members-page')" data-page="members-page">
-                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-people-fill" viewBox="0 0 16 16">
-                    <path d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5.784 6A2.24 2.24 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.3 6.3 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1zM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5"/>
-                </svg>
-                <span class="text-xs mt-1">成員</span>
             </div>
             <div class="nav-item" onclick="showPage('schedule-page')" data-page="schedule-page">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-calendar-event-fill" viewBox="0 0 16 16">
