--- a/index.html
+++ b/index.html
@@ -949,6 +949,10 @@
                                 </label>
                                 <label class="checklist-item flex items-center space-x-3 cursor-pointer rounded-lg p-2">
                                     <input type="checkbox" class="w-5 h-5 text-green-600 bg-gray-700 border-gray-600 rounded focus:ring-green-500 focus:ring-2">
+                                    <span class="text-sm">牙膏、牙刷</span>
+                                </label>
+                                <label class="checklist-item flex items-center space-x-3 cursor-pointer rounded-lg p-2">
+                                    <input type="checkbox" class="w-5 h-5 text-green-600 bg-gray-700 border-gray-600 rounded focus:ring-green-500 focus:ring-2">
                                     <span class="text-sm">泳衣泳帽 (泡溫泉用)</span>
                                 </label>
                             </div>
@@ -2183,5 +2187,6 @@
 
 </body>
 </html>
+
 
 
