--- a/index.html
+++ b/index.html
@@ -924,6 +924,10 @@
                                 </label>
                                 <label class="checklist-item flex items-center space-x-3 cursor-pointer rounded-lg p-2">
                                     <input type="checkbox" class="w-5 h-5 text-green-600 bg-gray-700 border-gray-600 rounded focus:ring-green-500 focus:ring-2">
+                                    <span class="text-sm">抹茶餅乾</span>
+                                </label>
+                                <label class="checklist-item flex items-center space-x-3 cursor-pointer rounded-lg p-2">
+                                    <input type="checkbox" class="w-5 h-5 text-green-600 bg-gray-700 border-gray-600 rounded focus:ring-green-500 focus:ring-2">
                                     <span class="text-sm">毛巾</span>
                                 </label>
                             </div>
