--- a/index.html
+++ b/index.html
@@ -1383,7 +1383,7 @@
     </script>
 
 <audio id="bgm" loop muted>
-    <source src="上路.mp3" type="audio/mpeg">
+    <source src="完美的一天.mp3" type="audio/mpeg">
 </audio>
 <script>
     // 點擊頁面解除靜音
