--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-water mx-auto mb-2 text-cyan-400" viewBox="0 0 16 16">
                             <path d="M8 16a6 6 0 0 0 6-6c0-1.655-1.122-2.904-2.432-4.362C10.254 4.176 8.75 2.503 8 0c0 0-6 5.686-6 10a6 6 0 0 0 6 6M6.646 4.646l.708.708c-.29.29-1.128 1.311-1.907 2.87l-.894-.448c.85-1.702 1.803-2.838 2.093-3.13"/>
                         </svg>
-                        <h3 class="font-semibold">潛水店家</h3>
+                        <h3 class="font-semibold">裝備店家</h3>
                         <p class="text-xs text-gray-300 mt-1">資訊</p>
                     </div>
                     <div class="nav-card bg-white/10 backdrop-blur-md rounded-xl p-4 text-center cursor-pointer hover:bg-white/20 transition-all" onclick="showPage('transport-page')">
@@ -938,8 +938,8 @@
         <div class="min-h-screen w-full flex flex-col items-center p-4 sm:p-6 pb-20">
             <main class="w-full max-w-lg mx-auto">
                 <header class="text-center my-8">
-                    <h1 class="text-3xl font-bold tracking-tight nature-title text-shadow-lg">潛水中心</h1>
-                    <p class="text-gray-300 mt-2">龍洞地區潛水中心推薦</p>
+                    <h1 class="text-3xl font-bold tracking-tight nature-title text-shadow-lg">相關資訊</h1>
+                    <p class="text-gray-300 mt-2">店家 x 影片 x 保險</p>
                 </header>
 
             <!-- 坤成潛水資訊卡片 -->
