--- a/資料夾名稱/index.html
+++ b/資料夾名稱/index.html
@@ -910,7 +910,7 @@
                                 </label>
                                 <label class="checklist-item flex items-center space-x-3 cursor-pointer rounded-lg p-2">
                                     <input type="checkbox" class="w-5 h-5 text-green-600 bg-gray-700 border-gray-600 rounded focus:ring-green-500 focus:ring-2">
-                                    <span class="text-sm">防水包 (其實包包不防水也還好)</span>
+                                    <span class="text-sm">防水包</span>
                                 </label>
                                 <label class="checklist-item flex items-center space-x-3 cursor-pointer rounded-lg p-2">
                                     <input type="checkbox" class="w-5 h-5 text-green-600 bg-gray-700 border-gray-600 rounded focus:ring-green-500 focus:ring-2">
